# halite3

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MyBot.cbp  MyBot.cpp  README.md  cmake_install.cmake  run_game.sh  zip.sh
benchmarks/: RandomBot.py
hlt/: constants.cpp  constants.hpp  direction.hpp  dropoff.hpp  game.hpp  game_map.cpp  game_map.hpp  hungarian.cpp  hungarian.hpp  log.cpp  log.hpp  map_cell.hpp  player.cpp  player.hpp  position.hpp  ship.cpp  ship.hpp  types.hpp  utils.hpp
old/hlt/: game_map.hpp  ship.hpp
util/: eval.py  game.py  register.py  requirements.txt  upload.py  zip.sh
util/hlt_client/: gym.py
util/hlt_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
